
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/user_account">
        <SwitchPreferenceCompat
            app:key="userAccount"
            app:title="@string/user_account"
        />

        <ListPreference
            app:defaultValue="N/A"
            app:key="userId"
            app:title="@string/user_id_title"
            app:useSimpleSummaryProvider="true"
            app:dependency="userAccount"
        />
    </PreferenceCategory>

    <PreferenceCategory app:title= "@string/user_consents">
        <SwitchPreferenceCompat
            app:key="usage"
            app:title="@string/anonymous_usage"
        />

        <SwitchPreferenceCompat
            app:dependency="usage"
            app:key="location"
            app:summaryOff= "@string/allow_location_off"
            app:summaryOn="@string/allow_location_on"
            app:title="@string/anonymous_location"
        />
    </PreferenceCategory>

    <PreferenceCategory app:title= "@string/user_misc">
        <SwitchPreferenceCompat
            app:key="show_intro"
            app:title="@string/show_intro_on_next_run"
        />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/environments">
        <ListPreference
            app:defaultValue="env_TEST"
            app:entries="@array/env_names"
            app:entryValues="@array/env_names"
            app:key="environment"
            app:title="@string/actual_env_title"
            app:useSimpleSummaryProvider="true"
        />
    </PreferenceCategory>

</PreferenceScreen>
