<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        app:actionViewClass="com.applego.oblog.tppwatch.util.EmptySubmitSearchView" />

    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add_tpp"
        android:icon="@drawable/ic_add"
        android:title="@string/add_tpp"
        app:showAsAction="never" />

    <item
        android:id="@+id/load_directory"
        android:title="@string/load_from_server"
        app:showAsAction="never" />
    <!--
        <item
            android:id="@+id/settings"
            android:title="@string/preferences_title"
            app:showAsAction="never" />

        <item
            android:id="@+id/about_frag"
            android:title="@string/about_menu_item"
            app:showAsAction="never" />-->

    <!--
        <item
            android:id="@+id/revokedSwitchForActionBar"
            android:title="Revoked"
            android:layout_centerVertical="true"
            app:showAsAction="always"
            app:actionLayout="@layout/switch_item"
            />
    -->
</menu>
