<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.applego.oblog.tppwatch.tppdetail.TppDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:visibility="@{viewmodel.isDataAvailable ? View.VISIBLE : View.GONE}">

            <LinearLayout
                android:id="@+id/detail_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                 android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.isDataAvailable ? View.VISIBLE : View.GONE}"
                android:weightSum="2">

                <!-- android:weightSum="4"-->
                <LinearLayout
                    android:id="@+id/labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_entity_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_entity_code" />

                    <TextView
                        android:id="@+id/label_entity_names"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_national_ref_code"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_entity_names" />

                    <TextView
                        android:id="@+id/label_home_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/label_home_country"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:visibility="visible"
                        android:textSize="10sp"
                        tools:text="@string/label_home_country" />

                    <TextView
                        android:id="@+id/label_national_ref_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_entity_code"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_national_ref_code" />

                    <TextView
                        android:id="@+id/label_entity_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_entity_address" />

                    <TextView
                        android:id="@+id/label_authorization_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_entity_authorization_start" />

                    <TextView
                        android:id="@+id/label_authorization_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="10sp"
                        android:text="@string/label_entity_authorization_end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/entity_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.entityCode}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_names"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.ebaProperties.entityNames}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_home_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@{viewmodel.tpp.ebaEntity.country}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_national_ref_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.ebaProperties.nationalReferenceCode}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.ebaProperties.address}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_authorization_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.ebaProperties.address}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entity_authorization_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:text="@{viewmodel.tpp.ebaEntity.ebaProperties.authorizationEnd}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passports_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="?android:attr/listDivider" />

<!--                android:ems="10"-->
                <TextView
                    android:id="@+id/label_passports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider2"
                    android:clickable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp"
                    tools:text="@string/label_passports" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/visas_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/visas_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <EditText
                        android:id="@+id/label_visa_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_follow"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:enabled="false"
                        android:inputType="none|textPersonName"
                        android:text="@string/label_country"
                        android:textSize="12sp"
                        />

                    <EditText
                        android:id="@+id/label_visa_psd2_roles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_used"
                        android:layout_toRightOf="@id/label_visa_country"
                        android:layout_weight="3"
                        android:clickable="false"
                        android:editable="false"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:text="@string/label_roles"
                        android:textSize="12sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/passports_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/visas_labels"
                    android:layout_marginBottom="10dp"
                    android:fadeScrollbars="false"
                    android:scrollbars="horizontal|vertical"
                    app:items="@{viewmodel.tpp.ebaEntity.ebaPassport.services}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
